b=293267, fix canvas rendering speed, r+sr=bz,a=shaver